<resources>
    <string name="app_name">Easy GbeGbe</string>
    <string name="menu_bar"> Menu List </string>


    <string name="map_key" translatable="false">
        AIzaSyDmk0nIJTNglKWztaherdwjuDoLW_wpXTY
    </string>

    <string name="login_preference">com.nadim.gbe_gbe_dev_login_preference</string>
    <string name="login_status_preference">com.nadim.gbe_gbe_dev_login_status_preference</string>
    <string name="listNumber">Order Number:</string>
    <string name="deliverStatus"> Deliver Status:</string>
    <string name="address"> Address: </string>
    <string name="addressActivitywriteAddress">Enter your delivery address</string>
    <string name="addressActivityEdittexterror">Enter your full address</string>
    <string name="addressactivityDoneButton">Done</string>
    <string name="forgetpasswordActivitytextview">Enter your phone number</string>
    <string name="phoneDgit">+88:</string>
    <string name="forgetpasswordphoneedittext">Phone</string>
    <string name="forgetsetpasswordtextview">Enter your new password</string>
    <string name="forgetsetpasswordedittext">New Password</string>
    <string name="forgetsetpasswordsecondedittext">Confirm password</string>
    <string name="forgetsetpassworddonebutton">Done</string>
    <string name="forgetotptextview">Sending SMS code for verification</string>
    <string name="forgetotpsecondtextview">Wait for the code ...</string>
    <string name="forgetotpedittext">Verification code</string>
    <string name="loginphondgit">+88:</string>
    <string name="loginphone">Phone</string>
    <string name="loginpasswordedittext">Password</string>
    <string name="logintextviewpassword">Forget </string>
    <string name="logintextviewforget">Forget password?</string>
    <string name="loginsecondtextview">If you do not have any account?</string>
    <string name="loginthirdtextview">Click Here</string>
    <string name="tnxmessage">Thanks</string>
    <string name="messageActivitysecond">Our representative will contact you shortly.</string>
    <string name="messagethird">Save your order number.</string>
    <string name="messagefourth">The order number is,</string>
    <string name="againorder">Order Again?</string>
    <string name="orderlistcheck">Check List</string>
    <string name="profiletextviewmsg">Click on the image below and upload a purchase list</string>
    <string name="profileNextButton">Next</string>
    <string name="registerenameedittext">Enter your full name</string>
    <string name="registerphonedigit">+88:</string>
    <string name="registerphonenumber">Phone Number</string>
    <string name="registeredittextpassword">Password</string>
    <string name="registeredittextconfirm">Confirm password</string>
    <string name="registersignupbutton">Sign up</string>
    <string name="registertextviewfirst">If you have an account</string>
    <string name="registertextviewclick">Click Here</string>
    <string name="verifyfirsttextview">Sending SMS code for verification.</string>
    <string name="verifysecondtextview">Wait for the code ...</string>
    <string name="verifyedittextmsg">Verification code</string>
    <string name="waitingmsgforget">Wait ...</string>
    <string name="orderlistshowmenu">Order list</string>
    <string name="changeLang">Change your language</string>
    <string name="forgetActivityemplyerror">Valid number is required....</string>

    <string name="forgetActivitytoast">The phone number is not received by the registrar</string>
    <string name="forgetActivityelseerror">Please try again later</string>
    <string name="forgetActivityFailurerror">Please try again later</string>
    <string name="forgetSetProgress">Wait ...</string>
    <string name="forgetsetError">Your password is required</string>
    <string name="forgetSeterrortwo">Password must be at least 4 characters long</string>
    <string name="forgetsetErrorthird"> You need a secure password</string>
    <string name="forgetSetconfirmerror">Your confirmed password is incorrect</string>
    <string name="forgetSetFalseerror">Something is wrong your input</string>
    <string name="forgetSetSussessful">Successfully registered</string>
    <string name="forgetSetResponseError">UserName Already Exist, Please try again later</string>
    <string name="forgetSetfailureError">Failed</string>
    <string name="forgetVerifyCodeerror">Enter Code..</string>
    <string name="forgetVerifyVerificationError">Failed</string>
    <string name="addressActivityProgress">Wait ...</string>
    <string name="addressActivituAddressError">The correct address is required</string>
    <string name="addressActivityFalseError">This phone number is already registered</string>
    <string name="addressActivitySucessError">Order Successfully</string>
    <string name="addressActivityresponseerror">UserName Already Exist, Please try again later</string>
    <string name="addressActivityFailed">Failed</string>
    <string name="loginActivityProgress">Wait ...</string>
    <string name="loginActivityOtpPhoneError">11 digit phone number required</string>
    <string name="loginActivityphoneErrortwo">11 digit phone number required</string>
    <string name="loginActivityPasswordError">Proper password required</string>
    <string name="loginActivityPasswordLenthError">Password must be at least 4 characters long</string>
    <string name="loginActivitySucessError">Your phone number or password is incorrect</string>
    <string name="loginActivitySuccess">Successfully Login</string>
    <string name="loginActivityElseerror">Your phone number or password is incorrect</string>
    <string name="loginActivityFailedError">Please connect your internet connection</string>
    <string name="loginActivityFailureError">Please connect your internet connection</string>
    <string name="loginExit">Exit</string>
    <string name="loginExittwo">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="loginActivityNegative">No</string>
    <string name="messageActivityset">Exit</string>
    <string name="messageActivityExit">Do you want to Exit?</string>
    <string name="messageActivitySecond">Yes</string>
    <string name="messageNegative">No</string>
    <string name="profileActivityProgress">Wait ...</string>
    <string name="profileActivityToast">Please take a picture properly</string>
    <string name="profileActivityDialog">Exit</string>
    <string name="profileActivityExit">Do you want to Exit?</string>
    <string name="profileActivityYes">Yes</string>
    <string name="profileActivityNo">No</string>
    <string name="profileActivityPermission">Permission</string>
    <string name="profileActivityPremissionsecond">Please accept the permissions</string>
    <string name="profileActivityLogout">Logout completed successfully</string>
    <string name="registerActivityProgress">Wait ...</string>
    <string name="registerActivityUserNameError">You need a full name</string>
    <string name="registerActivityPhoneError">11 digit phone number required</string>
    <string name="registerActivitySecondPhoneError">11 digit phone number required</string>
    <string name="registerActivityPasswordError">Your password is required</string>
    <string name="registerActivitySencodEPassword">Password must be at least 4 characters long</string>
    <string name="registerActivityConfirmPasswordError">You need a secure password</string>
    <string name="registerActivityCorfirmSencode">Your confirmed password is incorrect</string>
    <string name="registerActivityTrueError">The phone number has already been registered</string>
    <string name="registerActivityElseError">Please try again later</string>
    <string name="registerActivityFailureError">Please try again later</string>
    <string name="dataAdapterEmtypImage">Empty Image</string>
    <string name="verifyOrderProgress">Wait ...</string>
    <string name="VerifyPhoneProgress">Wait ...</string>
    <string name="verifyPhoneCodeError">Enter the code ..</string>
    <string name="verifyPhoneFalseError">This phone number is already registered</string>
    <string name="verifyPhoneSuccessError">Successfully registered</string>
    <string name="verifyPhoneElseError">UserName Already Exist, Please try again later</string>
    <string name="verifyPhoneFailureError">Failed</string>
    <string name="yourlocation">Your location</string>
    <string name="loading">Loading...</string>
    <string name="save_and_proceed">Save and Proceed</string>
    <string name="change">Change</string>
    <string name="signOut">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="note">Note:</string>
    <string name="addressReqired">Enter Your Address</string>
    <string name="delivery_address_home">Delivery address: (Home)</string>
    <string name="other_address_if_you_wish_to_send">Other address if you wish to send:</string>
    <string name="preferable_time_and_note">Preferable time and note </string>
    <string name="item">Item</string>
    <string name="review">Review</string>
    <string name="orderAddress">Delivery Address</string>
    <string name="noteAddress">Note</string>
    <string name="myProfile">My Profile</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="myAddress">Address:</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_name">Old Name:</string>
    <string name="old_email">Old Email:</string>
    <string name="new_name">New Name:</string>
    <string name="new_email">New Email:</string>
    <string name="old_birthDate">Add BirthDate:</string>
    <string name="new_password">New Password:</string>
    <string name="old_address">Old Address:</string>
    <string name="new_address">New Address:</string>
    <string name="you_can_add_multiple_image_also">You can add multiple image also</string>
    <string name="addText">Add more Picture</string>
    <string name="addBirthdate">Add</string>
    <string name="add_your_age">Your Age: </string>
    <string name="birthdate">BirthDate:</string>
    <string name="age">Age:</string>
    <string name="birth_dateShow">Birth Date:</string>
    <string name="ageShow">Age:</string>
    <string name="locationTrack">your current Address is..</string>
    <string name="profileEdit_day_month_year">(Day/Month/Year)</string>
    <string name="myProfile_day_month_year">(Day/Month/Year)</string>
    <string name="finish">Submit</string>
    <string name="AlertFinishActivity">Alert</string>
    <string name="alertMessageFinishActivity">Are you sure?</string>
    <string name="cancelFinishActivity">Cancel</string>
    <string name="successfuMsg">SuccessFull</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseGallery">Choose from Gallery</string>
    <string name="cancelPhotoSelect">Cancel</string>
    <string name="addphotos">Add Photo!</string>
    <string name="takephotos">Take Photo</string>
    <string name="image_item_select">If you send your grocery item via picture\n please click here</string>
    <string name="choose_item_from_list">If you buy choose our popular item\n please click here </string>
    <string name="or">Or</string>


</resources>
