<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity.UserEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25dp"
                android:text="@string/update_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_margin="10dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/myEditImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profileimages"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:inputType="text"
                            android:text="@string/old_name"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/oldName"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_gravity="center"
                            android:inputType="text"
                            android:text="@string/new_name"/>
                        <EditText
                            android:id="@+id/myEditProfileName"
                            android:textSize="15dp"
                            android:inputType="textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textAllCaps="true"
                            android:background="@drawable/username"
                            android:layout_margin="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:inputType="text"
                            android:text="@string/old_name"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/oldEmail"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_gravity="center"
                            android:inputType="text"
                            android:text="@string/new_email"/>
                        <EditText
                            android:id="@+id/myEditProfileEmail"
                            android:textSize="15dp"
                            android:inputType="textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textAllCaps="true"
                            android:background="@drawable/username"
                            android:layout_margin="5dp"/>
                    </LinearLayout>

                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:text="Phone: "/>
                        <EditText
                            android:id="@+id/myEditPhoneNumber"
                            android:textSize="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:layout_margin="5dp"/>
                    </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:inputType="text"
                            android:textStyle="bold"
                            android:text="@string/old_birthDate"/>
                        <TextView
                            android:id="@+id/old_birthDate"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_gravity="center"
                            android:text="@string/birthdate"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/addBirthDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:background="@drawable/singup1"
                                android:text="@string/addBirthdate"
                                android:textColor="@color/colorWhite"
                                android:textAllCaps="false"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="15dp"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/profileEdit_day_month_year"/>
                                <TextView
                                    android:id="@+id/birthDateTextView"
                                    android:layout_marginTop="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textSize="25dp"
                                    android:textColor="@color/colorBlack"
                                    android:layout_gravity="center"
                                    android:gravity="center"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:inputType="text"
                            android:textStyle="bold"
                            android:text="@string/add_your_age"/>
                        <TextView
                            android:id="@+id/addAge"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_gravity="center"
                            android:text="@string/age"/>
                        <EditText
                            android:id="@+id/myEditAge"
                            android:textSize="15dp"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:background="@drawable/username"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorBackground"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:inputType="text"
                            android:textStyle="bold"
                            android:text="@string/old_address"/>
                        <TextView
                            android:id="@+id/oldAddress"
                            android:textSize="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_gravity="center"
                            android:text="@string/new_address"/>
                        <EditText
                            android:id="@+id/myEditAddress"
                            android:textSize="15dp"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:background="@drawable/username"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"/>
                    </LinearLayout>

                </LinearLayout>
                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:background="@drawable/singup1"
                    android:textColor="@color/colorWhite"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>